--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <main>
   <div class="col left">
       <div class="img-group">
-        <img src="images/illustration-box-desktop.svg" alt="">
-        <img src="images/illustration-woman-online-desktop.svg" alt="">
+        <img class="box" src="images/illustration-box-desktop.svg" alt="illustration-box">
+        <img class="women" src="images/illustration-woman-online-desktop.svg" alt="illustration-women">
   
       </div>
   </div>
@@ -20,38 +20,55 @@
       <h1>FAQ</h1>
       <ul>
         <li>
-          How many team members can I invite?
-          You can invite up to 2 additional users on the Free plan. There is no limit on 
-          team members for the Premium plan.
+          <strong>How many team members can I invite?</strong>
+          <i></i>
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
+          </p>
         </li>
-
-        <li>What is the maximum file upload size?
-          No more than 2GB. All files in your account must fit your allotted storage space.
-        </li>
+        <hr>
 
         <li>
-          How do I reset my password?
-          Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.
+          <strong>What is the maximum file upload size?</strong>
+          <i></i>
+          <p> No more than 2GB. All files in your account must fit your allotted storage space.</p>
         </li>
+        <hr>
 
         <li>
-          How do I reset my password?
+          <strong>How do I reset my password?</strong>
+          <i></i>
+          <p> Click “Forgot password” from the login page or “Change password” from your profile page.
+               A reset link will be emailed to you.</p>
+        </li>
+        <hr>
+
+        <li>
+          <strong>How do I reset my password?</strong>
+          <i></i>
+          <p>
           Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.
+          A reset link will be emailed to you.</p>
         </li>
+        <hr>
 
-        <li> Can I cancel my subscription?
-             Yes! Send us a message and we’ll process your request no questions asked.
+        <li> 
+          <strong>Can I cancel my subscription?</strong>
+          <i></i>
+          <p> Yes! Send us a message and we’ll process your request no questions asked.</p>
         </li>
+        <hr>
 
-        <li>Do you provide additional support?
-            Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        <li>
+          <strong>Do you provide additional support?</strong>
+          <i></i>
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
          </li>
+         <hr>
       </ul>
   </div>
 </main>
  
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
