--- a/index.html
+++ b/index.html
@@ -9,60 +9,57 @@
 <body>
 <main>
   <div class="col left">
-      <div class="img-group">
-        <img class="box" src="images/illustration-box-desktop.svg" alt="illustration-box">
-        <img class="women" src="images/illustration-woman-online-desktop.svg" alt="illustration-women">
-  
+      <img class="box" src="images/illustration-box-desktop.svg" alt="illustration-box">
+      <div class="img-women">
       </div>
   </div>
 
   <div class="col right">
       <h1>FAQ</h1>
       <ul>
-        <li>
-          <strong>How many team members can I invite?</strong>
-          <i></i>
+        <details>
+          <summary><strong>How many team members can I invite?</strong> <i></i></summary>
           <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
           </p>
-        </li>
+        </details>
         <hr>
 
-        <li>
-          <strong>What is the maximum file upload size?</strong>
+        <details>
+          <summary><strong>What is the maximum file upload size?</strong><i></i></summary>
           <i></i>
           <p> No more than 2GB. All files in your account must fit your allotted storage space.</p>
-        </li>
+        </details>
         <hr>
 
-        <li>
-          <strong>How do I reset my password?</strong>
+        <details>
+          <summary><strong>How do I reset my password?</strong><i></i></summary>
           <i></i>
           <p> Click “Forgot password” from the login page or “Change password” from your profile page.
                A reset link will be emailed to you.</p>
-        </li>
+          </details>
         <hr>
 
-        <li>
-          <strong>How do I reset my password?</strong>
+        <details>
+          <summary><strong>How do I reset my password?</strong><i></i></summary>
           <i></i>
           <p>
           Click “Forgot password” from the login page or “Change password” from your profile page.
           A reset link will be emailed to you.</p>
-        </li>
+        </details>
         <hr>
 
-        <li> 
-          <strong>Can I cancel my subscription?</strong>
+        <details> 
+          <summary><strong>Can I cancel my subscription?</strong><i></i></summary>
           <i></i>
           <p> Yes! Send us a message and we’ll process your request no questions asked.</p>
-        </li>
+        </details>
         <hr>
 
-        <li>
-          <strong>Do you provide additional support?</strong>
+        <details>
+          <summary><strong>Do you provide additional support?</strong><i></i></summary>
           <i></i>
           <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-         </li>
+        </details>
          <hr>
       </ul>
   </div>
