--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="col right">
       <h1>FAQ</h1>
-      <ul>
+      <div class="accordian-group">
         <details>
           <summary><strong>How many team members can I invite?</strong> <i></i></summary>
           <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.
@@ -61,7 +61,7 @@
           <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
         </details>
          <hr>
-      </ul>
+        </div>
   </div>
 </main>
  
